--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    /* background: black; */
+    /* background: #081b29; */
     /* background-image: url("home.jpeg"); */
     color: #ededed;
 }
@@ -41,7 +41,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: .4s;
 }
@@ -62,14 +62,18 @@ body {
 .home {
     height: 100vh;
     /* background: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url('home.jpeg') no-repeat; */
-    background: black;
+    background: #081b29;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     padding: 0 10%;
-    /* animation: showRight 1s ease forwards; */
-    /* animation-delay: 3s; */
+}
+
+img {
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .fade-in-image {
@@ -84,7 +88,6 @@ body {
 
 .home-content {
     max-width: 650px;
-
 }
 
 .home-content h1 {
@@ -101,7 +104,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: 1s;
 }
@@ -120,7 +123,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: 1.3s;
 }
@@ -138,7 +141,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: 1.6s;
 }
@@ -159,7 +162,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: 1.9s;
     z-index: 2;
@@ -176,7 +179,7 @@ body {
     border: 2px solid #e4d476;
     border-radius: 8px;
     font-size: 19px;
-    color: black;
+    color: #081b29;
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
@@ -196,7 +199,7 @@ body {
 }
 
 .btn-box a:nth-child(2):hover {
-    color: black;
+    color: #081b29;
 
 }
 
@@ -211,7 +214,7 @@ body {
     left: 0;
     width: 0;
     height: 100%;
-    background: black;
+    background: #081b29;
     z-index: -1;
     transition: .5s;
 }
@@ -236,7 +239,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #081b29;
     animation: showRight 1s ease forwards;
     animation-delay: 2.5s;
     z-index: 2;
@@ -261,7 +264,7 @@ body {
 }
 
 .home-sci a:hover {
-    color: black;
+    color: #081b29;
 }
 
 .home-sci a::before {
