--- a/style.css
+++ b/style.css
@@ -71,9 +71,11 @@ body {
 }
 
 img {
-    display: flex;
     width: 100%;
     height: 100%;
+    max-width: none;
+    object-fit: cover;
+    resize: none;
 }
 
 .fade-in-image {
